--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,3 @@
-<main class="main">
-	todo app works! route to login
-	<button (click)="router.navigateByUrl('/login')">go to login</button>
-</main>
+<app-header></app-header>
 <router-outlet></router-outlet>
 
