--- a/src/app/Features/Header/Header.html
+++ b/src/app/Features/Header/Header.html
@@ -1,5 +1,9 @@
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top">
 	<div class="container-fluid">
+		<a class="navbar-brand" [routerLink]="['home']" class="logo">
+			<img src="/assets/Images/full-logo.png" alt="logo-img" class="logo-img" />
+			<img src="/assets/Images/white-full-logo.png" alt="logo-img" class="white-logo-img" />
+		</a>
 		<button
 			class="navbar-toggler"
 			type="button"
@@ -10,7 +14,6 @@
 			aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
-		<button class="btn btn-danger">ddddddd</button>
 		<div class="collapse navbar-collapse flex-row-reverse" id="navbarNavDropdown">
 			<ul class="navbar-nav">
 				<li class="nav-item">
@@ -37,5 +40,10 @@
 				</li>
 			</ul>
 		</div>
+
+		<!-- [ngbPopover]="userPopup" -->
+		<button type="button" class="profile-pic" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" container="body" popoverClass="user-popover">
+			<img [src]="CurrentUser?.ProfilePicturePath?? 'assets/Images/default-pp.png'" alt="User Profile" data-toggle="dropdown" />
+		</button>
 	</div>
 </nav>
