continue logging in functionality and returning url and guards, some layout enhancements

--- a/src/app/Features/home/home.component.html
+++ b/src/app/Features/home/home.component.html
@@ -1,1 +1,5 @@
-<p>home works!</p>
+<div class="page-inner" id="home-page">
+	<div class="page-section landing">
+		<p>home works!</p>
+	</div>
+</div>
