--- a/src/app/Features/Header/Header.html
+++ b/src/app/Features/Header/Header.html
@@ -2,7 +2,6 @@
 	<div class="container-fluid">
 		<a class="navbar-brand" [routerLink]="['home']" class="logo">
 			<img src="/assets/Images/full-logo.png" alt="logo-img" class="logo-img" />
-			<img src="/assets/Images/white-full-logo.png" alt="logo-img" class="white-logo-img" />
 		</a>
 		<button
 			class="navbar-toggler"
@@ -31,11 +30,22 @@
 					<a
 						class="nav-link"
 						aria-current="page"
-						[routerLink]="['home']"
+						[routerLink]="['todolist']"
 						routerLinkActive="active"
 						data-bs-toggle="collapse"
 						data-bs-target=".navbar-collapse.show">
 						My List
+					</a>
+				</li>
+				<li class="nav-item">
+					<a
+						class="nav-link"
+						aria-current="page"
+						[routerLink]="['login']"
+						routerLinkActive="active"
+						data-bs-toggle="collapse"
+						data-bs-target=".navbar-collapse.show">
+						Login
 					</a>
 				</li>
 			</ul>
