--- a/src/app/Styles/Layout/_Layout.scss
+++ b/src/app/Styles/Layout/_Layout.scss
@@ -17,7 +17,7 @@ body {
 		}
 		.page-inner {
 			animation: initial-transition 0.3s ease-in-out;
-			color: var(--primary-color1);
+			color: var(--primary-font-color);
 			.page-section {
 				min-height: calc(100vh - var(--header-height));
 				&.no-min {
