--- a/src/app/Styles/_Variables.scss
+++ b/src/app/Styles/_Variables.scss
@@ -2,10 +2,10 @@
 // https://css-tricks.com/difference-between-types-of-css-variables/
 :root {
 	--primary-bg-color: #fff;
-	--primary-color1: #364555;
-	--primary-color2: #536d87;
+	--primary-color1: #3b76b5;
+	--primary-color2: #4e9bee;
 	--primary-color3: rgba(207, 216, 217, 1);
-	--primary-font-color: rgba(255, 255, 255, 1);
+	--primary-font-color: black;
 	--header-height: 56px;
 	--page-inner-content-padding: 20px;
 	--page-inner-sm-content-padding: 100px;
@@ -25,6 +25,6 @@
 	--box-shadow-course-card: 0px 0px 5px 1px rgba(117, 117, 117, 0.5);
 	// --animation-time: 2s;
 	.dark {
-		--primary-font-color: black;
+		--primary-font-color: white;
 	}
 }
