--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
-<app-header></app-header>
-<router-outlet></router-outlet>
+<main class="min-vh-100 inner-container">
+	<div class="page-master">
+		<app-header></app-header>
+		<router-outlet></router-outlet>
+	</div>
+</main>
 
