--- a/src/app/Features/login/login.component.html
+++ b/src/app/Features/login/login.component.html
@@ -1,3 +1,3 @@
 <p>login works!</p>
-<button (click)="authenticate()">login</button>
-<button (click)="logout()">logout</button>
+<button class="btn btn-secondary" (click)="authenticate()">login</button>
+<button class="btn btn-secondary ms-3" (click)="logout()">logout</button>
