--- a/src/app/Features/task-item/task-item.component.html
+++ b/src/app/Features/task-item/task-item.component.html
@@ -1,6 +1,9 @@
-<!-- Item List -->
-<div class="todo-item">
-	<input type="checkbox" [(ngModel)]="item.completed" />
-	<span class="item-title">{{ item.title }}</span>
+<div class="form-group">
+	<input [id]="'task-item' + item.Id" type="checkbox" [(ngModel)]="item.completed" />
+	<label [for]="'task-item' + item.Id" class="todo-item">
+		<span class="item-title">{{ item.title }}</span>
+	</label>
+	<span class="item-date">{{ item.title }}</span>
+
 	<p class="item-description">{{ item.description }}</p>
 </div>
