--- a/src/app/Features/todo-list/todo-list.component.html
+++ b/src/app/Features/todo-list/todo-list.component.html
@@ -1,14 +1,11 @@
-<!-- todo.component.html -->
-
-<div>
+<div class="todo-list">
 	<h1>Todo List</h1>
-
-	<app-task-item *ngFor="let item of todoList"></app-task-item>
+	<app-task-item *ngFor="let item of todoList" [TaskItem]="item"></app-task-item>
 
 	<!-- Add Item Form -->
 	<div class="add-item-form">
-		<input type="text" placeholder="Title" [(ngModel)]="newItem.title" />
-		<textarea placeholder="Description" [(ngModel)]="newItem.description"></textarea>
-		<button (click)="addItem()">Add Item</button>
+		<input class="form-control" type="text" placeholder="Title" [(ngModel)]="newItem.title" />
+		<textarea class="form-control" placeholder="Description" [(ngModel)]="newItem.description"></textarea>
+		<button class="btn btn-primary" (click)="addItem()">Add Item</button>
 	</div>
 </div>
