add items persisted

--- a/src/app/Features/todo-list/todo-list.component.html
+++ b/src/app/Features/todo-list/todo-list.component.html
@@ -6,6 +6,9 @@
 		</div>
 		<div *ngIf="IsLoaded">
 			<app-task-item *ngFor="let item of todoList" [TaskItem]="item"></app-task-item>
+			<div *ngIf="!IsAdded">
+				<app-loader></app-loader>
+			</div>
 		</div>
 	</div>
 
