--- a/src/app/Features/todo-list/todo-list.component.html
+++ b/src/app/Features/todo-list/todo-list.component.html
@@ -14,8 +14,8 @@
 
 	<!-- Add Item Form -->
 	<div class="add-item-form">
-		<input class="form-control" type="text" placeholder="Title" [(ngModel)]="newItem.title" />
-		<textarea class="form-control" placeholder="Description" [(ngModel)]="newItem.description"></textarea>
+		<input class="form-control" type="text" placeholder="Title" [(ngModel)]="newItem.Title" />
+		<textarea class="form-control" placeholder="Description" [(ngModel)]="newItem.Description"></textarea>
 		<button class="btn btn-primary" (click)="addItem()">Add Item</button>
 	</div>
 </div>
