--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <main class="min-vh-100 inner-container">
 	<div class="page-master">
 		<app-header></app-header>
-		<router-outlet></router-outlet>
+		<div class="page-inner">
+			<router-outlet></router-outlet>
+		</div>
 	</div>
 </main>
-
