--- a/src/app/Features/todo-list/todo-list.component.html
+++ b/src/app/Features/todo-list/todo-list.component.html
@@ -1,4 +1,4 @@
-<div class="todo-list">
+<div class="todo-list page-section">
 	<h1>Todo List</h1>
 	<div class="tasks-content">
 		<div *ngIf="!IsLoaded">
@@ -14,8 +14,10 @@
 
 	<!-- Add Item Form -->
 	<div class="add-item-form">
-		<input class="form-control" type="text" placeholder="Title" [(ngModel)]="newItem.Title" />
-		<textarea class="form-control" placeholder="Description" [(ngModel)]="newItem.Description"></textarea>
-		<button class="btn btn-primary" (click)="addItem()">Add Item</button>
+		<div class="text">
+			<input class="form-control" type="text" placeholder="Title" [(ngModel)]="newItem.Title" />
+			<textarea class="form-control" placeholder="Description" [(ngModel)]="newItem.Description"></textarea>
+		</div>
+		<button class="btn btn-primary" (click)="addItem()"><i class="fa fa-plus"></i>+</button>
 	</div>
 </div>
