--- a/src/app/Features/task-item/task-item.component.html
+++ b/src/app/Features/task-item/task-item.component.html
@@ -4,4 +4,14 @@
 		<span class="item-title">{{ item.Title }}</span>
 		<p class="item-description">{{ item.Description }}</p>
 	</label>
+	<div class="actions">
+		<button (click)="ToggleItemStatus()">
+			OK
+			<i class="fa fa-check" aria-hidden="true"></i>
+		</button>
+		<button>
+			NO
+			<i class="fa fa-trash-o" aria-hidden="true"></i>
+		</button>
+	</div>
 </div>
