--- a/src/app/Features/task-item/task-item.component.scss
+++ b/src/app/Features/task-item/task-item.component.scss
@@ -15,4 +15,18 @@
 			color: grey;
 		}
 	}
+
+	.actions {
+		display: flex;
+		justify-items: center;
+		align-items: center;
+		opacity: 0;
+		transition: all 0.3s ease-in-out;
+	}
+
+	&:hover {
+		.actions {
+			opacity: 1;
+		}
+	}
 }
