--- a/src/app/Features/todo-list/todo-list.component.html
+++ b/src/app/Features/todo-list/todo-list.component.html
@@ -1,11 +1,13 @@
 <div class="todo-list page-section">
 	<h1>Todo List</h1>
 	<div class="tasks-content">
-		<div *ngIf="!IsLoaded">
+		<div *ngIf="!IsLoaded" class="d-flex justify-content-center">
 			<app-loader></app-loader>
 		</div>
 		<div *ngIf="IsLoaded">
-			<app-task-item *ngFor="let item of todoList" [TaskItem]="item"></app-task-item>
+			<div class="item" *ngFor="let item of filteredTodoList">
+				<app-task-item [TaskItem]="item"></app-task-item>
+			</div>
 			<div *ngIf="!IsAdded" class="text-center">
 				<app-loader></app-loader>
 			</div>
@@ -14,9 +16,10 @@
 
 	<!-- Add Item Form -->
 	<div class="add-item-form">
+		<div class="box-shadow"></div>
 		<div class="text">
-			<input class="form-control" type="text" placeholder="Title" [(ngModel)]="newItem.Title" />
-			<textarea class="form-control" placeholder="Description" [(ngModel)]="newItem.Description"></textarea>
+			<input class="form-control" type="text" placeholder="Reminder" [(ngModel)]="newItem.Title" />
+			<textarea class="form-control" placeholder="Add Note" [(ngModel)]="newItem.Description"></textarea>
 		</div>
 		<button class="btn btn-primary" (click)="addItem()"><i class="fa fa-plus"></i>+</button>
 	</div>
