--- a/src/app/Features/todo-list/todo-list.component.scss
+++ b/src/app/Features/todo-list/todo-list.component.scss
@@ -5,19 +5,40 @@
 		padding: 20px;
 		width: 100%;
 		flex-grow: 1;
+
+		.item {
+			border-bottom: 1px solid #d2d2d2;
+		}
 	}
 
 	.add-item-form {
-		padding: 5px 10px;
+		padding: 10px 10px 5px 10px;
 		width: 100%;
 		display: flex;
 		justify-content: center;
 		align-items: flex-end;
+		position: relative;
+		overflow: hidden;
+		.box-shadow {
+			position: absolute;
+			top: 5px;
+
+			box-shadow: 0px -10px 10px -10px rgba(0, 0, 0, 0.75);
+			width: 120%;
+			height: 25px;
+		}
 
 		.text {
 			width: 100%;
 			input {
 				margin-bottom: 10px;
+			}
+			textarea {
+				height: 30px;
+				min-height: 10px;
+				font-size: 12px;
+				padding: 5px 15px;
+				color: grey;
 			}
 		}
 		button {
