--- a/src/app/Features/Header/Header.html
+++ b/src/app/Features/Header/Header.html
@@ -15,7 +15,7 @@
 		</button>
 		<div class="collapse navbar-collapse flex-row-reverse" id="navbarNavDropdown">
 			<ul class="navbar-nav">
-				<li class="nav-item">
+				<!-- <li class="nav-item">
 					<a
 						class="nav-link"
 						aria-current="page"
@@ -25,7 +25,7 @@
 						data-bs-target=".navbar-collapse.show">
 						home
 					</a>
-				</li>
+				</li> -->
 				<li class="nav-item">
 					<a
 						class="nav-link"
@@ -34,7 +34,7 @@
 						routerLinkActive="active"
 						data-bs-toggle="collapse"
 						data-bs-target=".navbar-collapse.show">
-						My List
+						To-do List
 					</a>
 				</li>
 				<li class="nav-item">
@@ -45,15 +45,25 @@
 						routerLinkActive="active"
 						data-bs-toggle="collapse"
 						data-bs-target=".navbar-collapse.show">
-						Login
+						Account
+					</a>
+				</li>
+				<li class="nav-item">
+					<a (click)="ToggleDarkMode()" class="nav-link" aria-current="page" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show">
+						{{isDarkMode? 'Light Mode': 'Dark Mode'}}
 					</a>
 				</li>
 			</ul>
 		</div>
 
-		<!-- [ngbPopover]="userPopup" -->
 		<button type="button" class="profile-pic" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" container="body" popoverClass="user-popover">
-			<img [src]="CurrentUser?.ProfilePicturePath?? 'assets/Images/default-pp.png'" alt="User Profile" data-toggle="dropdown" />
+			<img [src]="CurrentUser?.ProfilePicturePath?? 'assets/Images/default-pp.png'" [alt]="'User Profile'" data-toggle="dropdown" />
 		</button>
+		<ng-template #userPopup>
+			<div class="text-center">
+				<strong> Hello, </strong>
+				<span>{{CurrentUser?.FirstName}} {{ CurrentUser?.LastName}}</span>
+			</div>
+		</ng-template>
 	</div>
 </nav>
