--- a/src/app/Features/todo-list/todo-list.component.html
+++ b/src/app/Features/todo-list/todo-list.component.html
@@ -21,6 +21,8 @@
 			<input class="form-control" type="text" placeholder="Reminder" [(ngModel)]="newItem.Title" />
 			<textarea class="form-control" placeholder="Add Note" [(ngModel)]="newItem.Description"></textarea>
 		</div>
-		<button class="btn btn-primary" (click)="addItem()"><i class="fa fa-plus"></i>+</button>
+		<button class="btn btn-primary" (click)="addItem()">
+			<fa-icon [icon]="faPlus"></fa-icon>
+		</button>
 	</div>
 </div>
