--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<main class="min-vh-100 inner-container">
+<main class="min-vh-100 inner-container" [ngClass]="{ 'dark-mode': isDarkMode }">
 	<div class="page-master">
 		<app-header></app-header>
 		<div class="page-inner">
