--- a/src/app/Features/task-item/task-item.component.html
+++ b/src/app/Features/task-item/task-item.component.html
@@ -9,7 +9,7 @@
 			<fa-icon [icon]="faCheck"></fa-icon>
 			<!-- <i class="fa fa-check" aria-hidden="true"></i> -->
 		</button>
-		<button class="btn btn-outline-danger">
+		<button (click)="Delete()" class="btn btn-outline-danger">
 			<fa-icon [icon]="faTrash"></fa-icon>
 			<!-- <i class="fa fa-trash-o" aria-hidden="true"></i> -->
 		</button>
