add preloader and fix toggling status

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<app-preloader *ngIf="!NoLoader" [Loaded]="IsLoaded"></app-preloader>
 <main class="min-vh-100 inner-container" [ngClass]="{ 'dark-mode': isDarkMode }">
 	<div class="page-master">
 		<app-header></app-header>
