--- a/src/app/Features/task-item/task-item.component.html
+++ b/src/app/Features/task-item/task-item.component.html
@@ -1,9 +1,10 @@
 <div class="form-group">
-	<input [id]="'task-item' + item.Id" type="radio" name="taskStatus" [(ngModel)]="item.Status" [value]="item.Id" />
-	<label [for]="'task-item' + item.Id" class="todo-item">
+	<input [id]="'task-item' + item.Id" type="checkbox" name="taskStatus" [checked]="item.Status" (change)="ToggleItemStatus()" />
+	<!-- <label [for]="'task-item' + item.Id" class="todo-item"> </label> -->
+	<div class="todo-item">
 		<span class="item-title">{{ item.Title }}</span>
 		<p class="item-description">{{ item.Description }}</p>
-	</label>
+	</div>
 	<div class="actions">
 		<button (click)="ToggleItemStatus()" class="btn btn-outline-success">
 			<fa-icon [icon]="faCheck"></fa-icon>
